# full-stack

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
doc/: containers.graffle
docker/: docker-compose-template.yml  docker-compose-up.sh
docker/app/: Dockerfile  Dockerfile-compile  Dockerfile-distribution  Dockerfile-siblings
docker/nix/: Dockerfile  dot_bashrc.sh  nix-install-basics.sh  run-daemon.sh
docker/present/: Dockerfile-compile  Dockerfile-distribution
docker/proxy/etc/: envoy.yaml
documentation/: nix-and-docker.md
etc/: settings-sample+jeroen.sh  settings-sample.sh
monolith/: Cargo.toml  build.rs  flake.nix
monolith/src/: application.rs
monolith/src/example_event/: mod.rs  mongo.rs  trusted_generated.rs
monolith/src/example_query/: mod.rs
present/: Cargo.toml  build.rs  flake.nix  index.html  package-lock.json  package.json
present/src/: lib.rs  main.rs
