[workspace]

[package]
edition = "2021"
name = "example_present"
version = "0.1.0"

[dependencies]
anyhow = "1"
console_log = "^1"
leptos = { version = "^0.6", features = ["csr"] }
log = "^0.4"
prost = "^0.12"
serde = "1"
serde_derive = "1"
serde_json = "1"
tonic = { version = "^0.11", default-features = false, features = ["codegen","prost"] }
tonic-web-wasm-client = "^0.5"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "^0.4"
wasm-logger = "^0.2"
web-sys = "^0.3"

[build-dependencies]
anyhow = "1.0"
tonic-build = "0.11.0"
